--- a/sams/pom.xml
+++ b/sams/pom.xml
@@ -100,7 +100,12 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.47</version>
 		</dependency>
-
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
 		<!-- shiro -->
 <!--		<dependency>
 			<groupId>org.apache.shiro</groupId>
