修改配置文件日志目录

--- a/ssms/src/main/resources/application-dev.properties
+++ b/ssms/src/main/resources/application-dev.properties
@@ -8,5 +8,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 ##
 ##日志配置
-logging.file=ssms-console.log
+logging.file=./log/ssms-console.log
 logging.level.root=info
